[metadata]
name = pyhexedit
description = Hex Editor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hex editor pyside2 qt
platform = any
url = https://github.com/timxx/pyhexedit
author = Weitian Leung
author_email = weitianleung@gmail.com
license = MIT
license-file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3

[options]
install_requires =
    PySide2
python_requires = >=3
packages = pyhexedit
